# GAMES101hw

./: .gitignore
homework0/: CMakeLists.txt  main.cpp
homework1/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework2/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp
homework3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
